Worldpay input problem on android

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.82.0",
+    "@worldpay/access-worldpay-checkout-react-native-sdk": "^3.0.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
